# PyFinitDiff

./: .buildinfo  .coverage  .coveragerc  .gitignore  .readthedocs.yml  CMakeLists.txt  Code.html  Examples.html  Makefile  README.md  README.rst  References.html  Theory.html  code.html  data.json  genindex.html  index.html  meta.yaml  objects.inv  pyproject.toml  references.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  theory.html  version_switcher.json
.doctrees/: code.doctree  environment.pickle  index.doctree  references.doctree  sg_execution_times.doctree  theory.doctree
.doctrees/gallery/: index.doctree  sg_execution_times.doctree
.github/workflows/: deploy.yml  deploy_workflow.yml  sub_deploy_coverage_badge.yml  sub_deploy_documentation.yml
CMAKES/: Meta.cmake  Prefix.cmake  Utils.cmake
PyFD/: PlotConfig.py  Source.py  Utils.py
PyFinitDiff/: Coefficients.py  Dense.py  Source.py  Sparse.py  Sparse2D.py  Tools.py  Utils.py  _version.py  diagonal.py  triplet.py
PyFinitDiff.egg-info/: PKG-INFO  SOURCES.txt
PyFinitDiff/finite_difference_1D/: __init__.py  boundaries.py  diagonals.py  finite_difference.py  meshes.py  sparse.py
PyFinitDiff/finite_difference_2D/: __init__.py  boundaries.py  derivative.py  finite_difference.py  meshes.py  sparse.py  utils.py
Tests/: Unittest.py
_downloads/004105bddbccc83bd75a64472dc851b9/: plot_triplets_1.ipynb
_downloads/0bb8307d3e1a5d286bc42f96b5e6de26/: plot_right_anti_symmetric.py
_downloads/0d1a6b13a7f6e642149332fd576081d2/: plot_triplets_0.ipynb
_downloads/0d3b7e6f305b76ef1576fbfe53a542af/: plot_left_symmetric.ipynb
_downloads/0daf0efbb255fc2aa91ee723774279c6/: plot_top_anti_symmetric.ipynb
_downloads/0f5ccfc9f9ff1edd847d9fbb81709e9b/: plot_no_symmetry.ipynb
_downloads/13254c59866f2a414c2e83e0466c83e1/: plot_bottom_symmetric.py
_downloads/27a5dabb3a86405ef8001aeb5f7ecf5f/: plot_mode_1.ipynb
_downloads/34f8277dbc2b161c61727fcc40527469/: plot_mode_0.ipynb
_downloads/37076d5746cd87f3e1eddb89ecad0f3c/: plot_bottom_anti_symmetric.ipynb
_downloads/3bb33b182dcf656847673c311e42469d/: plot_top_anti_symmetric.ipynb
_downloads/3fb0c88426ab4f818ce4ea917e5a9671/: plot_mode_3.ipynb
_downloads/40aeae304d84a508cfb039b940bc2056/: plot_no_symmetry.ipynb
_downloads/4445b7719a559aed579364374fabd8a7/: plot_top_anti_symmetric.py
_downloads/4847bb1d63630fd7810b6db16a2443b9/: plot_left_anti_symmetric.py
_downloads/49e9b462ab15c0e8278f30a53f18d8f5/: plot_triplets_2.ipynb
_downloads/52237dac2572e0bcd33de7cd4523fa57/: plot_bottom_symmetric.ipynb
_downloads/7419cf5fe1dc33db2c799c98545d3013/: plot_triplets_0.py
_downloads/771ab7571b765a0942018c56755b1808/: plot_mode_3.ipynb
_downloads/8690bae7c50d406b473b977e02091fca/: plot_right_symmetric.ipynb
_downloads/8696ac3d30ffa86698892aa9f1367ca8/: plot_top_symmetric.py
_downloads/89eb47941e14eeed92d8830911e01d70/: plot_right_symmetric.ipynb
_downloads/8eae9b1450119100a3b4fc63d664e870/: plot_right_symmetric.py
_downloads/95f6d2bca1ac35a8dda472d23cd6a899/: plot_mode_1.ipynb
_downloads/9a70ff46aba7046e47024e3e4ed8f8a9/: plot_top_symmetric.ipynb
_downloads/a679939dd5d25b01e1139a71e8665b16/: plot_mode_1.py
_modules/: index.html
_sources/: Code.rst.txt  sg_execution_times.rst.txt
developments/: test_0.py
docs/: requirements.txt
gallery/: index.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_15ad185475966600___init___py.html  z_15ad185475966600_boundaries_py.html  z_15ad185475966600_dense_py.html  z_15ad185475966600_derivative_py.html  z_15ad185475966600_diagonals_py.html  z_15ad185475966600_finite_difference_py.html  z_15ad185475966600_utils_py.html  z_39c035da9c68666f_directories_py.html  z_89e02cfe0a6f7d40___init___py.html  z_89e02cfe0a6f7d40__version_py.html  z_89e02cfe0a6f7d40_boundary_values_py.html  z_89e02cfe0a6f7d40_diagonal_py.html  z_89e02cfe0a6f7d40_triplet_py.html  z_89e02cfe0a6f7d40_utils_py.html  z_d83ee22334a40e05___init___py.html  z_d83ee22334a40e05_boundaries_py.html  z_d83ee22334a40e05_derivative_py.html  z_d83ee22334a40e05_diagonals_py.html  z_d83ee22334a40e05_finite_difference_py.html  z_d83ee22334a40e05_utils_py.html  z_fffb8f54f5ced3c2___init___py.html  z_fffb8f54f5ced3c2_backward_py.html  z_fffb8f54f5ced3c2_central_py.html  z_fffb8f54f5ced3c2_forward_py.html
requirements/: requirements-development.txt  requirements-documentation.txt  requirements-testing.txt  requirements.txt
tests/: test_1D.py  test_1D_api.py  test_2D.py  test_2D_api.py  test_2D_eigen.py  test_dummy.py  test_eigensolving.py  test_memory.py  test_sparse.py  test_triplet.py  test_validation.py
(+993 files in other folders)
