[metadata]
name = PyFinitDiff
description = A package finit-difference matrix generation.
version = file: PyFinitDiff/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/PyFinitDiff
license = MIT
license_file = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics
        License :: OSI Approved :: MIT License
        Intended Audience :: Science/Research


[options]
include_package_data = True
packages = find:
python_requires >= 3.10

setup_requires = 
        setuptools
        wheel

[sdist]
formats = zip, gztar

[options.package_data]
* = *.npy, *.so

# install_requires = file: requirements/requirements.txt

# [options.extras_require]
# development = file: requirements/requirements-development.txt

# documentation = file: requirements/requirements-documentation.txt

# testing = file: requirements/requirements-testing.txt


[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = PyFinitDiff
omit =
    PyFinitDiff/coefficients/*