[metadata]
name = PyFinitDiff
description = A package finit-difference matrix generation.
version = file: PyFinitDiff/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/PyFinitDiff
license = MIT
license_file = LICENSE
readme = README.rst
Documentation = https://pyfinitdiff.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
include_package_data = True
packages = find:
python_requires >= 3.11
install_requires =
    pydantic==2.6.3
    numpy
    scipy
    MPSPlots==1.4.5
    tabulate

setup_requires =
    setuptools>=40.6.0
    wheel


[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0


[options.packages.find]
exclude =
    extern
    docs
    tests

[flake8]
max-line-length = 200
per-file-ignores = */__init__.py: F401
ignore = W605


[sdist]
formats = zip, gztar
